--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -298,7 +298,7 @@
                     }
                     <div style=" overflow-y:scroll;    z-index: 5; height: 500px;">
                         <div class="panel-group" id="accordion">
-                            @foreach (var item in Model.HistoricoDetallado.Historico.GroupBy(a => a.Boleta))
+                            @foreach (var item in Model.HistoricoDetallado.Historico.OrderBy(a => a.Fecha).GroupBy(a => a.Boleta))
                             {
                                 ii++;
                                 <div class="panel panel-default">
