--- a/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
@@ -345,7 +345,7 @@
                         <div class="col-md-4 pr-1">
 
                             <div class="form-group">
-                                <label>Aceptar / Rechazar</label>
+                                <label>Status</label>
                                 @if (Model.BTS.ProcesadaSAP)
                                 {
                                     <select id="status" class="form-control" asp-for="BTS.Status" disabled="disabled" readonly>
@@ -353,7 +353,8 @@
 
 
                                         <option value="0">Abierta </option>
-                                        <option value="1">Cerrada </option>
+                                        <option value="1">Apartado y Entregado </option>
+                                        <option value="2">Rechazado </option>
 
 
 
