--- a/Sicsoft.Checkin.Web/Pages/Bodega/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Index.cshtml
@@ -251,10 +251,11 @@
                                 <select id="statusBodega" class="form-control" asp-for="filtro.Codigo3">
                                     <option value="-1">Seleccione</option>
 
-                                    <option value="0">En espera</option>
-                                    <option value="1">Apartado y Entregado</option>
-                                    <option value="2">Rechazados</option>
+                                    <option value="0">Abierta </option>
+                                    <option value="3">Apartado y Trasladado </option>
 
+                                    <option value="1"> Entregadal tecnico </option>
+                                    <option value="2">Rechazado </option>
 
                                 </select>
                             </div>
