--- a/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
@@ -396,7 +396,9 @@
 
 
                                         <option value="0">Abierta </option>
-                                        <option value="1">Apartado y Entregado </option>
+                                        <option value="3">Apartado y Trasladado </option>
+
+                                        <option value="1"> Entregadal tecnico </option>
                                         <option value="2">Rechazado </option>
 
 
@@ -411,7 +413,9 @@
 
 
                                         <option value="0">Abierta </option>
-                                        <option value="1">Apartado y Entregado </option>
+                                        <option value="3">Apartado y Trasladado </option>
+
+                                        <option value="1"> Entregadal tecnico </option>
                                         <option value="2">Rechazado </option>
 
 
